# AudioVibe-Desktop

./: LICENSE  PRESENTATION_SCRIPT.md  README.md  cozy-snacking-turtle.md  package-lock.json  package.json  tailwind.config.js  vibevoice.md
Audiovibe/: .gitignore  vibevoice_api.py  vite.config.ts
Audiovibe/src/: App.tsx
Audiovibe/src-tauri/src/: lib.rs
audiovibe-desktop/: eslint.config.js  package-lock.json  package.json
audiovibe-desktop/scripts/: bookData.js  downloadCovers.js  downloadRealCovers.js
audiovibe-desktop/src/: index.css
audiovibe-desktop/src-tauri/: Cargo.toml  tauri.conf.json
audiovibe-desktop/src-tauri/migrations/: 20240101000001_create_audiobooks_table.sql  20240101000002_create_playback_progress_table.sql  20240101000003_create_collections_table.sql  20240101000005_create_app_preferences_table.sql  20240101000006_create_recommendations_tables.sql
audiovibe-desktop/src-tauri/src/: lib.rs  lib_clean.rs  main.rs
audiovibe-desktop/src-tauri/src/audio/: manager.rs
audiovibe-desktop/src-tauri/src/database/: mod.rs
audiovibe-desktop/src-tauri/src/download/: mod.rs
audiovibe-desktop/src-tauri/src/services/: mod.rs  recommendation_service.rs
scripts/: downloadAllCovers.js  downloadCoversImproved.js  downloadWorkingCovers.js
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json  reader.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000004_create_playback_states_table.sql  20240103000001_create_ebooks_tables.sql
src-tauri/src/: lib.rs
src/hooks/: useKeyboardShortcuts.ts
src/pages/: Collections.tsx  Ebooks.tsx  Home.tsx  Library.tsx  Player.tsx  Reader.tsx  Settings.tsx
src/services/: archiveService.ts  localBookService.ts  mockTtsService.ts  searchService.ts  ttsService.ts
src/store/: app.ts  audio.ts  ebook.ts  library.ts  onboarding.ts  reader.ts
src/types/: audiobook.ts  ebook.ts
src/utils/: bookThumbnails.ts  nativeFile.ts
(+92 files in other folders)
